k8s/elk/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    app: elk-stack
